re PR libfortran/36538 (namelist failure with tabs preceding object name)

2008-06-14  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/36538
	Backport from trunk.
	* io/list_read.c (namelist_read): Add eat_separator to
	eliminate leading tabs.

From-SVN: r136784